[package]
name = "runbeam-cli"
version = "0.1.0"
edition = "2024"

# Ensure the binary produced is named `runbeam`
[[bin]]
name = "runbeam"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Error handling
anyhow = "1.0"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persistence and paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
