[package]
name = "runbeam-cli"
version = "0.6.0"
edition = "2024"
authors = ["Aurabox <hello@aurabox.cloud>"]
description = "CLI for managing Runbeam and Harmony"
license = "Apache-2.0"
repository = "https://github.com/aurabx/runbeam-cli"
homepage = "https://harmonyproxy.com"
keywords = ["runbeam", "harmony"]
exclude = [
    ".github",
    "docs",
    "WARP.md"
]

# Ensure the binary produced is named `runbeam`
[[bin]]
name = "runbeam"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Error handling
anyhow = "1.0"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persistence and paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Browser opening for authentication
open = "5"
# Async runtime for SDK integration
tokio = { version = "1", features = ["rt", "macros"] }
# Runbeam SDK for API client and JWT validation
#runbeam-sdk = { path = "../runbeam-sdk" }
runbeam-sdk = {version = "0.5.0"}

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"           # For HTTP mocking
serial_test = "3"       # For serializing tests that can't run in parallel

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
